# tensorflow-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.new.txt  README.md  build_solution.cmd  main.cpp  main.h
